[gd_scene load_steps=3 format=2]

[ext_resource path="res://audio/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/bgm/heartbeat.ogg" type="AudioStream" id=2]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="TrackFadeIn1" type="AudioStreamPlayer" parent="."]

[node name="TrackFadeIn2" type="AudioStreamPlayer" parent="."]

[node name="TrackFadeOut1" type="AudioStreamPlayer" parent="."]

[node name="TrackFadeOut2" type="AudioStreamPlayer" parent="."]

[node name="HeartBeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
